Removed unnecessary files

--- a/parallel/CMakeLists.txt
+++ b/parallel/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.0)
 
-PROJECT(Parallel)
+PROJECT(Distributed)
 
 FIND_PACKAGE(MPI REQUIRED)
 FIND_PACKAGE(Boost COMPONENTS mpi REQUIRED)
-set(Boost_USE_STATIC_LIBS ON)
+# set(Boost_USE_STATIC_LIBS ON)
 
 IF (Boost_FOUND AND MPI_C_FOUND)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
@@ -18,5 +18,5 @@ IF (Boost_FOUND AND MPI_C_FOUND)
     TARGET_LINK_LIBRARIES(Distributed ${Boost_LIBRARIES} ${MPI_LIBRARIES})
 ENDIF()
 
-ADD_SUBDIRECTORY(Sender)
-ADD_SUBDIRECTORY(Receiver)
+# ADD_SUBDIRECTORY(Sender)
+# ADD_SUBDIRECTORY(Receiver)
