Added the bootstrap project with some examples

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-*/**/CMakeCache.txt
-*/**/CMakeFiles
-*/**/cmake_install.cmake
-*/**/Makefile
-*/**/*.swp
-parallel/Distributed
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.idea
