--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -1,5 +1,11 @@
 #//#snippet
 akka {
+
+  akka.loglevel = INFO
+
+  # Enable metrics extension in akka-cluster-metrics.
+  extensions = ["akka.cluster.metrics.ClusterMetricsExtension"]
+
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
 
@@ -9,7 +15,10 @@ akka {
 
     serialization-bindings {
       "com.google.protobuf.Message" = proto
+      "generated.models.Worker" = proto
     }
+
+    serialize-messages = on
 
   }
   remote {
@@ -21,6 +30,16 @@ akka {
   }
 
   cluster {
+
+    roles = [node]
+
+    # Disable legacy metrics in akka-cluster.
+    metrics.enabled = off
+
+    # Sigar native library extract location during tests.
+    # Note: use per-jvm-instance folder when running multiple jvm on one host.
+    metrics.native-library-extract-folder = ${user.dir}/target/native
+
     seed-nodes = [
       "akka.tcp://ClusterSystem@127.0.0.1:2551",
       "akka.tcp://ClusterSystem@127.0.0.1:2552"]
@@ -40,14 +59,3 @@ http {
   interface = "0.0.0.0"
   port = 9000
 }
-
-# Disable legacy metrics in akka-cluster.
-akka.cluster.metrics.enabled = off
-
-# Enable metrics extension in akka-cluster-metrics.
-akka.extensions = ["akka.cluster.metrics.ClusterMetricsExtension"]
-
-# Sigar native library extract location during tests.
-# Note: use per-jvm-instance folder when running multiple jvm on one host.
-akka.cluster.metrics.native-library-extract-folder = ${user.dir}/target/native
-#//#snippet
