Converted all messages to protobufs

--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -14,8 +14,10 @@ akka {
     }
 
     serialization-bindings {
-      "com.google.protobuf.Message" = proto
+      "com.google.protobuf.GeneratedMessage" = proto
       "generated.models.Worker" = proto
+      "generated.models.SetWorkers" = proto
+      "generated.models.WorkersResult" = proto
     }
 
     serialize-messages = on
