Changed SetWorkers to MoveWorkers for clarity

--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -16,7 +16,7 @@ akka {
     serialization-bindings {
       "com.google.protobuf.GeneratedMessage" = proto
       "generated.models.Worker" = proto
-      "generated.models.SetWorkers" = proto
+      "generated.models.MoveWorkers" = proto
       "generated.models.WorkersResult" = proto
     }
 
