MessagePublisher can now proxy messages to the destination actor specified by MoveWorkers

--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -18,6 +18,7 @@ akka {
       "generated.models.Worker" = proto
       "generated.models.MoveWorkers" = proto
       "generated.models.WorkersResult" = proto
+      "generated.models.MoveWorkersSuccess" = proto
     }
 
     serialize-messages = on
