Can now add and remove workers from ClusterBackend. Added a master node.

--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -19,6 +19,8 @@ akka {
       "generated.models.MoveWorkers" = proto
       "generated.models.WorkersResult" = proto
       "generated.models.MoveWorkersSuccess" = proto
+      "generated.models.AddWorkers" = proto
+      "generated.models.RemoveWorkers" = proto
     }
 
     serialize-messages = on
