Master node now sends messages to the child nodes in a round-robin manner.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,9 @@
 #//#snippet
 akka {
+
+
   actor {
+
     provider = "akka.cluster.ClusterActorRefProvider"
 
     serializers {
@@ -9,7 +12,17 @@ akka {
 
     serialization-bindings {
       "com.google.protobuf.Message" = proto
+      "com.google.protobuf.GeneratedMessage" = proto
+      "generated.models.Worker" = proto
+      "generated.models.MoveWorkers" = proto
+      "generated.models.WorkersResult" = proto
+      "generated.models.MoveWorkersSuccess" = proto
+      "generated.models.AddWorkers" = proto
+      "generated.models.RemoveWorkers" = proto
+      "generated.models.StartAddingWorkers" = proto
     }
+
+    serialize-messages = on
 
   }
   remote {
