--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -1,7 +1,9 @@
 #//#snippet
 akka {
 
-  akka.loglevel = INFO
+  loglevel = INFO
+
+  loggers = [akka.testkit.TestEventListener]
 
   # Enable metrics extension in akka-cluster-metrics.
   extensions = ["akka.cluster.metrics.ClusterMetricsExtension"]
@@ -14,6 +16,7 @@ akka {
     }
 
     serialization-bindings {
+      "com.google.protobuf.Message" = proto
       "com.google.protobuf.GeneratedMessage" = proto
       "generated.models.Worker" = proto
       "generated.models.MoveWorkers" = proto
@@ -21,6 +24,7 @@ akka {
       "generated.models.MoveWorkersSuccess" = proto
       "generated.models.AddWorkers" = proto
       "generated.models.RemoveWorkers" = proto
+      "generated.models.StartAddingWorkers" = proto
     }
 
     serialize-messages = on
@@ -44,10 +48,6 @@ akka {
     # Sigar native library extract location during tests.
     # Note: use per-jvm-instance folder when running multiple jvm on one host.
     metrics.native-library-extract-folder = ${user.dir}/target/native
-
-    seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551",
-      "akka.tcp://ClusterSystem@127.0.0.1:2552"]
 
     #//#snippet
     # excluded from snippet
