--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,6 +20,7 @@ akka {
       "generated.models.AddWorkers" = proto
       "generated.models.RemoveWorkers" = proto
       "generated.models.StartAddingWorkers" = proto
+      "generated.models.MakeWebSocketConnection" = proto
     }
 
     serialize-messages = on
