--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,23 @@
 #//#snippet
-akka {
 
+piCluster {
+  # The name for this cluster
+  appName = "piCluster"
+
+  # The amount of PIs we are using
+  childNodes = 3
+
+  # The amount of workers added every second
+  workersToAdd = 1
+
+  http {
+    interface = "0.0.0.0"
+    port = 9000
+  }
+}
+
+akka {
+  loglevel = "INFO"
 
   actor {
 
@@ -35,9 +52,7 @@ akka {
   }
 
   cluster {
-    seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551",
-      "akka.tcp://ClusterSystem@127.0.0.1:2552"]
+    seed-nodes = ["akka.tcp://ClusterSystem@127.0.0.1:2551"]
 
     #//#snippet
     # excluded from snippet
@@ -48,11 +63,6 @@ akka {
     #
     # auto-down-unreachable-after = 10s
   }
-}
-
-http {
-  interface = "0.0.0.0"
-  port = 9000
 }
 
 # Disable legacy metrics in akka-cluster.
