Minor tweak to better present the data

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,7 @@ piCluster {
   # The amount of PIs we are using
   childNodes = 3
 
-  # The amount of workers added every second
+  # The amount of workers added upon each interval
   workersToAdd = 1
 
   http {
